fix compilation with new google libraries