@@ -1,20 +1,20 @@
 /**
  * Starschema Big Query JDBC Driver
  * Copyright (C) 2012, Starschema Ltd.
- * 
+ * <p/>
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 2 of the License, or
  * any later version.
- * 
+ * <p/>
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
- * 
+ * <p/>
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
- * 
+ * <p/>
  * This class implements functions to Authorize bigquery client
  */
 
@@ -22,10 +22,7 @@ package net.starschema.clouddb.cmdlineverification;
 
 import java.awt.Desktop;
 import java.awt.Desktop.Action;
-import java.io.ByteArrayInputStream;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
@@ -51,9 +48,9 @@ import com.google.api.services.bigquery.BigqueryScopes;
 // import net.starschema.clouddb.bqjdbc.logging.Logger;
 
 public class Oauth2Bigquery {
-    
+
     private static String servicepath = null;
-    
+
     /**
      * Log4j logger, for debugging.
      */
@@ -62,21 +59,21 @@ public class Oauth2Bigquery {
     /**
      * Browsers to try:
      */
-    static final String[] browsers = { "google-chrome", "firefox", "opera",
+    static final String[] browsers = {"google-chrome", "firefox", "opera",
             "epiphany", "konqueror", "conkeror", "midori", "kazehakase",
-            "mozilla" };
+            "mozilla"};
     /**
      * Google client secrets or {@code null} before initialized in
      * {@link #authorize}.
      */
     private static GoogleClientSecrets clientSecrets = null;
-    
+
     /**
      * Reference to the GoogleAuthorizationCodeFlow used in this installed
      * application authorization sequence
      */
     public static GoogleAuthorizationCodeFlow codeflow = null;
-    
+
     /**
      * The default path to the properties file that stores the xml file location
      * where client credentials are saved
@@ -84,32 +81,28 @@ public class Oauth2Bigquery {
     private static String PathForXmlStore = System.getProperty("user.home")
             + File.separator + ".bqjdbc" + File.separator
             + "xmllocation.properties";
-    
+
     /**
      * Authorizes the installed application to access user's protected data. if
      * possible, gets the credential from xml file at PathForXmlStore
-     * 
-     * @param transport
-     *            HTTP transport
-     * @param jsonFactory
-     *            JSON factory
-     * @param receiver
-     *            verification code receiver
-     * @param scopes
-     *            OAuth 2.0 scopes
+     *
+     * @param transport   HTTP transport
+     * @param jsonFactory JSON factory
+     * @param receiver    verification code receiver
+     * @param scopes      OAuth 2.0 scopes
      */
     public static Credential authorize(HttpTransport transport,
-            JsonFactory jsonFactory, VerificationCodeReceiver receiver,
-            Iterable<String> scopes, String clientid, String clientsecret)
+                                       JsonFactory jsonFactory, VerificationCodeReceiver receiver,
+                                       List<String> scopes, String clientid, String clientsecret)
             throws Exception {
-        
+
         BQXMLCredentialStore Store = new BQXMLCredentialStore(
                 Oauth2Bigquery.PathForXmlStore);
-        
+
         GoogleClientSecrets.Details details = new Details();
         details.setClientId(clientid);
         details.setClientSecret(clientsecret);
-        details.setFactory(CmdlineUtils.getJsonFactory());
+        details.set("Factory", CmdlineUtils.getJsonFactory());
         details.setAuthUri("https://accounts.google.com/o/oauth2/auth");
         details.setTokenUri("https://accounts.google.com/o/oauth2/token");
         GoogleClientSecrets secr = new GoogleClientSecrets()
@@ -118,7 +111,7 @@ public class Oauth2Bigquery {
                 .setJsonFactory(CmdlineUtils.getJsonFactory())
                 .setTransport(CmdlineUtils.getHttpTransport())
                 .setClientSecrets(secr).build();
-        
+
         if (Store.load(clientid + ":" + clientsecret, CredentialForReturn) == true) {
             return CredentialForReturn;
         }
@@ -138,28 +131,27 @@ public class Oauth2Bigquery {
                     .newTokenRequest(code).setRedirectUri(redirectUri)
                     .execute();
             // store credential and return it
-            
+
             // Also ads a RefreshListener, so the token will be always
             // automatically refreshed.
             return Oauth2Bigquery.codeflow.createAndStoreCredential(response,
                     clientid + ":" + clientsecret);
-        }
-        finally {
+        } finally {
             receiver.stop();
         }
     }
-    
+
     /**
      * Authorizes a bigquery Connection with the given "Installed Application"
      * Clientid and Clientsecret
-     * 
+     *
      * @param clientid
      * @param clientsecret
      * @return Authorized bigquery Connection
      * @throws SQLException
      */
     public static Bigquery authorizeviainstalled(String clientid,
-            String clientsecret) throws SQLException {
+                                                 String clientsecret) throws SQLException {
         LocalServerReceiver rcvr = new LocalServerReceiver();
         List<String> Scopes = new ArrayList<String>();
         Scopes.add(BigqueryScopes.BIGQUERY);
@@ -170,8 +162,7 @@ public class Oauth2Bigquery {
                     CmdlineUtils.getHttpTransport(),
                     CmdlineUtils.getJsonFactory(), rcvr, Scopes, clientid,
                     clientsecret);
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             throw new SQLException(e);
         }
         logger.debug("Creating a new bigquery client.");
@@ -180,11 +171,11 @@ public class Oauth2Bigquery {
         Oauth2Bigquery.servicepath = bigquery.getServicePath();
         return bigquery;
     }
-    
+
     /**
      * This function gives back an Authorized Bigquery Client It uses a service
      * account, which doesn't need user interaction for connect
-     * 
+     *
      * @param serviceaccountemail
      * @param keypath
      * @return Authorized Bigquery Client via serviceaccount e-mail and keypath
@@ -192,28 +183,30 @@ public class Oauth2Bigquery {
      * @throws IOException
      */
     public static Bigquery authorizeviaservice(String serviceaccountemail,
-            String keypath) throws GeneralSecurityException, IOException {
+                                               String keypath) throws GeneralSecurityException, IOException {
+        List<String> scopes = new ArrayList<String>();
+        scopes.add(BigqueryScopes.BIGQUERY);
         logger.debug("Authorizing with service account.");
         GoogleCredential credential = new GoogleCredential.Builder()
                 .setTransport(CmdlineUtils.getHttpTransport())
                 .setJsonFactory(CmdlineUtils.getJsonFactory())
                 .setServiceAccountId(serviceaccountemail)
-                // e-mail ADDRESS!!!!
-                .setServiceAccountScopes(BigqueryScopes.BIGQUERY)
-                // Currently we only want to access bigquery, but it's possible
-                // to name more than one service too
+                        // e-mail ADDRESS!!!!
+                .setServiceAccountScopes(scopes)
+                        // Currently we only want to access bigquery, but it's possible
+                        // to name more than one service too
                 .setServiceAccountPrivateKeyFromP12File(new File(keypath))
                 .build();
-        
+
         Bigquery bigquery = new Builder(CmdlineUtils.getHttpTransport(),
                 CmdlineUtils.getJsonFactory(), credential).build();
         Oauth2Bigquery.servicepath = bigquery.getServicePath();
         return bigquery;
     }
-    
+
     /**
      * Open a browser at the given URL.
-     * 
+     *
      * @param url
      */
     private static void browse(String url) {
@@ -226,15 +219,14 @@ public class Oauth2Bigquery {
                     desktop.browse(URI.create(url));
                     logger.debug("success");
                     return;
-                }
-                catch (IOException e) {
+                } catch (IOException e) {
                     logger.debug("Failed with desktop.browse", e);
                     // handled below
                 }
             }
         }
-        
-       
+
+
         // Next try browsers
         logger.debug("Try with browsers");
         // Code from Bare Bones Browser Launcher
@@ -244,36 +236,32 @@ public class Oauth2Bigquery {
                 logger.debug("Mac OS com.apple.eio.FileManager should handle the URL");
                 Class.forName("com.apple.eio.FileManager")
                         .getDeclaredMethod("openURL",
-                                new Class[] { String.class })
-                        .invoke(null, new Object[] { url });
+                                new Class[]{String.class})
+                        .invoke(null, new Object[]{url});
                 return;
-            }
-            else
-                if (osName.startsWith("Windows")) {
-                    logger.debug("Let's run internet suxplorer! with the URL: " + url);                    
-                    Runtime.getRuntime().exec(
-                            "cmd.exe /c start iexplore.exe \"" + url + "\"");
-                    return;
-                }
-                else { // assume Unix or Linux-
-                    logger.debug("Unix or Linux, we'll open a browser");
-                    String browser = null;
-                    for (String b : browsers) {
-                        if (browser == null
-                                && Runtime.getRuntime()
-                                        .exec(new String[] { "which", b })
-                                        .getInputStream().read() != -1) {
-                            Runtime.getRuntime().exec(
-                                    new String[] { browser = b, url });
-                        }
+            } else if (osName.startsWith("Windows")) {
+                logger.debug("Let's run internet suxplorer! with the URL: " + url);
+                Runtime.getRuntime().exec(
+                        "cmd.exe /c start iexplore.exe \"" + url + "\"");
+                return;
+            } else { // assume Unix or Linux-
+                logger.debug("Unix or Linux, we'll open a browser");
+                String browser = null;
+                for (String b : browsers) {
+                    if (browser == null
+                            && Runtime.getRuntime()
+                            .exec(new String[]{"which", b})
+                            .getInputStream().read() != -1) {
+                        Runtime.getRuntime().exec(
+                                new String[]{browser = b, url});
                     }
                 }
-        }
-        catch (Exception e) {
+            }
+        } catch (Exception e) {
             logger.debug("Failed", e);
             // handled below
         }
-        
+
         logger.debug("Then try with url.connect");
         try {
             URL myURL = new URL(url);
@@ -281,19 +269,18 @@ public class Oauth2Bigquery {
             myURLConnection.connect();
             logger.debug("success");
             return;
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             logger.debug(null, e);
             // handled below
         }
-        
+
         // Finally just ask user to open in their browser using copy-paste
         System.out.println("Please open the following URL in your browser:");
         System.out.println("  " + url);
         System.err.println("Please open the following URL in your browser:");
         System.err.println("  " + url);
     }
-    
+
     /**
      * Returns the Google client secrets or {@code null} before initialized in
      * {@link #authorize}.
@@ -301,15 +288,15 @@ public class Oauth2Bigquery {
     public static GoogleClientSecrets getClientSecrets() {
         return Oauth2Bigquery.clientSecrets;
     }
-    
+
     public static String getservicepath() {
         return Oauth2Bigquery.servicepath;
     }
-    
+
     /**
      * Creates GoogleClientsecrets "installed application" instance based on
      * given Clientid, and Clientsecret
-     * 
+     *
      * @param jsonFactory
      * @param clientid
      * @param clientsecret
@@ -332,10 +319,9 @@ public class Oauth2Bigquery {
                     + "\"auth_uri\": \"https://accounts.google.com/o/oauth2/auth\",\n"
                     + "\"token_uri\": \"https://accounts.google.com/o/oauth2/token\"\n"
                     + "}\n" + "}";
-            InputStream inputStream = new ByteArrayInputStream(
-                    clientsecrets.getBytes());
+            StringReader stringReader = new StringReader(clientsecrets);
             Oauth2Bigquery.clientSecrets = GoogleClientSecrets.load(
-                    jsonFactory, inputStream);
+                    jsonFactory, stringReader);
         }
         return Oauth2Bigquery.clientSecrets;
     }
